k8s/deployment-load-balancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-balancer
  namespace: pe-hackathon
  labels:
    app: load-balancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-balancer
  template:
    metadata:
      labels:
        app: load-balancer
    spec:
      containers:
        - name: nginx
          image: pe-hackathon/load-balancer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: stub
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
