k8s/deployment-url-shortener-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-a
  namespace: pe-hackathon
  labels:
    app: url-shortener-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-a
  template:
    metadata:
      labels:
        app: url-shortener-a
    spec:
      containers:
        - name: api
          image: pe-hackathon/url-shortener:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
