k8s/deployment-user-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-frontend
  namespace: pe-hackathon
  labels:
    app: user-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-frontend
  template:
    metadata:
      labels:
        app: user-frontend
    spec:
      containers:
        - name: nginx
          image: pe-hackathon/user-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 128Mi
