k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: pe-hackathon
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app: postgres
