k8s/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: pe-hackathon
  labels:
    app: dashboard
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30001
