k8s/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  namespace: pe-hackathon
  labels:
    app: load-balancer
spec:
  type: NodePort
  selector:
    app: load-balancer
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30880
    - name: stub
      port: 8081
      targetPort: stub
      nodePort: 30881
