k8s/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: pe-hackathon
  labels:
    app: prometheus
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
      nodePort: 30990
