k8s/service-url-shortener.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: pe-hackathon
  labels:
    app: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: http
